# saint_seiya

./: .gitignore  baixar_imagens.py  baixar_tudo.py  cartas.json  cartas_editadas.json  editor.html  gerar_editor_html.py  index.html  pyproject.toml  remover_texto_imagens.py
.github/workflows/: deploy.yml
